fixed layout of restaurant links to allow horizontal scrolling

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -48,3 +48,17 @@ button.value-display {
 button.btn {
 	border-radius: 0;
 }
+
+.restaurant-links-section {
+	
+	.row {
+		overflow-x: auto;
+		// white-space: nowrap!important;
+	}
+	
+// 	.col-3,.col-md-3 {
+// 		display: inline-block!important;
+// 		float: none!important;
+// 	}
+	
+}
